kubernetes/deployment.yaml
apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: my-website
spec:
  replicas: 3
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: frontend
        # image: my-website
        # imagePullPolicy: Never
        image: gcr.io/my-website-169905/github-coltonmorris-my-website
        ports:
        - containerPort: 8080
