kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-website
spec:
  selector:
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  # gce load balancer
  type: LoadBalancer
  loadBalancerIP: 35.197.4.146
